--- a/index.html
+++ b/index.html
@@ -237,167 +237,167 @@
     </div>
 
     <div class="container-fluid" id="quatro">
-        <!-- <div class="quatro-card">
-            I attended an arts high school, LaGuardia, and I've journaled extensively since my Freshman year of high school.
-            Unfortunately, many of my journals and projects are at home but I'll be adding my woodworking, ceramics, paintings,
-            and even more journal pages soon.
-            <br></br>
-        </div> -->
+        <div class="quatro-card"> <center><b>Black and White Photography 2</b></center><p></div>
         <br></br>
-        <div class="row">
-            <div class ="col">
-                <div id="quatro-carousel-1" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="images/A.jpeg" alt="First slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/B.jpeg" alt="Second slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/C.jpeg" alt="Second slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/D.jpeg" alt="First slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/E.jpeg" alt="Second slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/F.jpeg" alt="First slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/G.jpeg" alt="Second slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/H.jpeg" alt="First slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/I.jpeg" alt="Second slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/J.jpeg" alt="First slide">
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="images/K.jpeg" alt="Second slide">
-                              </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#quatro-carousel-1" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#quatro-carousel-1" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+        <div class = "row">
+            <div class ="col-12 col-sm-6 col-md-8">
+                <img class="quatro-images" src="images/BW2/a.jpg" alt="">
             </div>
             <div class ="col">
-                <div id="quatro-carousel-2" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/L.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/M.jpeg" alt="Second slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/N.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/O.jpeg" alt="Second slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/P.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/Q.jpeg" alt="Second slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/R.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/S.jpeg" alt="Second slide">
-                          </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#quatro-carousel-2" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#quatro-carousel-2" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class ="col">
-                <div id="quatro-carousel-3" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/2.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/4.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/7.jpeg" alt="Second slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/8.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/9.jpeg" alt="Second slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/10.jpeg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="images/11.jpeg" alt="Second slide">
-                          </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#quatro-carousel-3" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#quatro-carousel-3" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+                <img class="quatro-images" src="images/BW2/b.jpg" alt=""> <br></br>
+                <img class="quatro-images" id="left" src="images/BW2/b2.jpg" alt="">
             </div>
         </div>
         <br></br>
-        <div class="quatro-card"> okay <br></br></div>
+        <div class = "row">
+            <div class ="col">
+                <img class="quatro-images" src="images/BW2/c.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="quatro-images" src="images/BW2/d.jpg" alt="">
+            </div>
+        </div>
         <br></br>
+        <div class = "row">
+            <div class ="col">
+                <img class="quatro-images" src="images/BW2/e.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="quatro-images" src="images/BW2/f.jpg" alt="">
+            </div>
+            <div class ="col">
+                <img class="quatro-images" src="images/BW2/g.jpg" alt="">
+            </div>
+        </div>
     </div>
 
+    <!-- <div class="row">
+        <div class ="col">
+            <div id="quatro-carousel-1" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/A.jpeg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/B.jpeg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/C.jpeg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/D.jpeg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/E.jpeg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/F.jpeg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/G.jpeg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/H.jpeg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/I.jpeg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/J.jpeg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="images/K.jpeg" alt="Second slide">
+                          </div>
+                </div>
+
+                <a class="carousel-control-prev" href="#quatro-carousel-1" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#quatro-carousel-1" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class ="col">
+            <div id="quatro-carousel-2" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/L.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/M.jpeg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/N.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/O.jpeg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/P.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/Q.jpeg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/R.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/S.jpeg" alt="Second slide">
+                      </div>
+                </div>
+
+                <a class="carousel-control-prev" href="#quatro-carousel-2" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#quatro-carousel-2" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class ="col">
+            <div id="quatro-carousel-3" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/2.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/4.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/7.jpeg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/8.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/9.jpeg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/10.jpeg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/11.jpeg" alt="Second slide">
+                      </div>
+                </div>
+
+                <a class="carousel-control-prev" href="#quatro-carousel-3" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#quatro-carousel-3" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div> -->
+
     <div class="container-fluid" id="seis">
-        <div class = "row" id = "seis">
-            <div class ="col">
-                <img class="seis-images" id="a" src="images/BW2/a.jpg" alt="">
-            </div>
-            <div class ="col">
-                <img class="seis-images" id="a" src="images/BW2/b.jpg" alt="">
-            </div>
-            <div class ="col">
-                <img class="seis-images" id="a" src="images/BW2/c.jpg" alt="">
-            </div>
-        </div>
-        <br></br>
-        <div class = "row" id = "seis">
-            <div class ="col">
-                <img class="seis-images" id="a" src="images/BW2/d.jpg" alt="">
-            </div>
-            <div class ="col">
-                <img class="seis-images" id="a" src="images/BW2/e.jpg" alt="">
-            </div>
-            <div class ="col">
-                <img class="seis-images" id="a" src="images/BW2/f.jpg" alt="">
-            </div>
-        </div>
     </div>
 
     <!-- Optional JavaScript -->
